--- a/pytest.ini
+++ b/pytest.ini
@@ -3,10 +3,8 @@ xfail_strict=true
 addopts = -rfsx --strict-markers
 markers =
     slow: mark tests as slow
-    system: system end-to-end tests
-    workflows: workflow end-to-end tests
-    frameworks_cpu: CPU framework tests
-    frameworks_native_cpu: CPU framework native tests
+    tensorflow_cpu: CPU TensorFlow tests
+    e2e_cpu: end to end CPU tests
     integ1: run integration tests on CI split 1
     integ2: run integration tests on CI split 2
     integ3: run integration tests on CI split 3
