--- a/examples/nlp/albert_squad_pytorch/const.yaml
+++ b/examples/nlp/albert_squad_pytorch/const.yaml
@@ -1,12 +1,13 @@
-# After 2 epochs, model should hit 85.76/88.87 F1/EM
-description: ALBert_SQuAD_PyTorch_1gpu
+# After 2 epochs, model should hit 86.24/89.06 F1/EM
+description: ALBert_SQuAD_PyTorch_64gpu
 hyperparameters:
-    global_batch_size: 2
-    learning_rate: 5e-5
+    global_batch_size: 128
+    learning_rate: 0.0002
     model_type: 'albert'
+    do_lower_case: true
     adam_epsilon: 1e-8
     weight_decay: 0
-    num_warmup_steps: 13220  # 10% of total training
+    num_warmup_steps: 206
     max_seq_length: 384
     doc_stride: 128
     max_query_length: 64
@@ -14,11 +15,10 @@ hyperparameters:
     max_answer_length: 30
     null_score_diff_threshold: 0.0
     max_grad_norm: 1.0
-    num_training_steps: 132198 # This is the number of optimizer steps. Train for 2 epochs
-    do_lower_case: true
-    use_radam: false
+    num_training_steps: 2064 # This is the number of optimizer steps. Train for 2 epochs
+    use_radam: true
 resources:
-    slots_per_trial: 1
+    slots_per_trial: 64
 searcher:
     name: single
     metric: f1
@@ -26,7 +26,7 @@ searcher:
         records: 264396
     smaller_is_better: false
 min_validation_period:
-    records: 80000
+    records: 100000
 data:
     pretrained_model_name: "albert-xxlarge-v2"
     use_bind_mount: True
@@ -34,7 +34,7 @@ data:
     task: "SQuAD2.0"  # SQuaD 2.0 has 132198 example.
 entrypoint: model_def:AlbertSQuADPyTorch
 optimizations:
-    aggregation_frequency: 24
+    aggregation_frequency: 2
 bind_mounts:
     - host_path: /tmp/
       container_path: /mnt/data
